--- a/src/reset.scss
+++ b/src/reset.scss
@@ -63,6 +63,10 @@ button, input, select, textarea { font-size: 100%; } /* 使得表单元素在 ie
 table { border-collapse: collapse; border-spacing: 0; }
 
 
+body {
+	background-color: #eee;
+}
+
 .box-view {
 	position: absolute;
 	left: 0;
@@ -78,4 +82,17 @@ table { border-collapse: collapse; border-spacing: 0; }
 		overflow-y: scroll;
 		-webkit-overflow-scrolling: touch;
 	}
+}
+
+
+.overflow-view {
+	position: absolute;
+	top: 0;
+    right: 0;
+    bottom: 0;
+	left: 0;
+	width: 100%;
+	overflow-x: hidden;
+	overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 }
