--- a/src/style/mixin.scss
+++ b/src/style/mixin.scss
@@ -6,3 +6,11 @@
 		border-bottom: 1px solid #eee;
     }
 }
+
+input {
+    text-indent: 10px;
+    line-height: 2;
+    font-size: 12px;
+    border-radius: 3px;
+    box-shadow: 0 0 3px rgba(0,0,0,.5) inset;
+}
