--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -26,9 +26,15 @@ th, td /* table elements 表格元素 */ {
 
 /** 设置默认字体 **/
 body,
-button, input, select, textarea /* for ie */ {
+button,
+input,
+select,
+textarea /* for ie */ {
   font: 14px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #333;
+  border: none;
+  outline: none;
+  -webkit-appearance: none;
 }
 h1, h2, h3, h4, h5, h6 { font-size: 100%; }
 address, cite, dfn, em, var { font-style: normal; } /* 将斜体扶正 */
