--- a/src/style/mixin.scss
+++ b/src/style/mixin.scss
@@ -1,3 +1,10 @@
+@media all and (display-mode: standalone) {
+  body {
+    background-color: #fff; 
+  }
+}
+
+
 .list {
     &-item {
     	display: flex;
